--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,16 @@
             <artifactId>AdminLTE</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>jquery-mask-plugin</artifactId>
+            <version>1.14.16</version>
+        </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+            <version>1.3.04</version>
+        </dependency>
     </dependencies>
 
     <build>
