Configurar função de lembrar-me

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 
 # Thymeleaf
 spring.thymeleaf.cache=false
+
+# Remember Me
+br.com.treinaweb.ediaristas.rememberme.key=/7YR?9M-{'hM{dW~}O+&dezr8U*4Gs
+br.com.treinaweb.ediaristas.rememberme.validitySeconds=172800
